--- a/src/Otw.WebApp/Resources/Pages/Learn.resx
+++ b/src/Otw.WebApp/Resources/Pages/Learn.resx
@@ -30,4 +30,10 @@
     <data name="NextWord" xml:space="preserve">
         <value>Next word</value>
     </data>
+    <data name="Loading" xml:space="preserve">
+        <value>Loading ...</value>
+    </data>
+    <data name="LoadingData" xml:space="preserve">
+        <value>Loading data ...</value>
+    </data>
 </root>
